# p-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assert/particle/: fragShader.glsl
asserts/glsl/bob_lamp/: fragShader.glsl  vertShader.glsl
asserts/glsl/particle/: vertShader.glsl
asserts/glsl/sphere/: fragShader.glsl  vertShader.glsl
asserts/glsl/sphere-with-speed/: vertShader.glsl
asserts/models/: .gitignore
asserts/models/bob_lamp/: bob_lamp.blend  bob_lamp.mtl
asserts/models/sphere/: sphere.blend
include/pengine/: common.h
include/pengine/element/: element.h  masspoint.h
include/pengine/force/gravity/: point.h
include/pengine/glsl/: glsl.h
include/pengine/model/: cube.h  manager.h  model.h
include/pengine/world/: qtworld.h  world.h
include/pengine/world/object/: object.h  particle.h  sphere.h
src/demo/model/: main.cpp
src/demo/multi/: main.cpp
src/demo/particle/: main.cpp
src/demo/particles/: main.cpp
src/demo/qtparticles/: main.cpp
src/demo/sphere/: main.cpp
src/pengine/element/: masspoint.cpp
src/pengine/force/gravity/: point.cpp
src/pengine/glsl/: glsl.cpp
src/pengine/model/: cube.cpp  manager.cpp  model.cpp
src/pengine/world/: qtworld.cpp  world.cpp
src/pengine/world/control/: keyboard.cpp  mouse.cpp
src/pengine/world/object/: object.cpp  particle.cpp  sphere.cpp
